# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: check-lint.yml  dev-check.yml  dev_check.yml
gendiff/: cli.py
gendiff/format/: json.py  plain.py  stylish.py
gendiff/modules/: formater.py  generate.py  module.py  parse.py
gendiff/scripts/: gendiff.py  generate_diff.py
tests/: test_gendiff.py
tests/fixtures/correct/: correct_plain.txt  correct_stylish.txt  test.json
