[tool.poetry]
name = "hexlet-code"
version = "0.1.6"
description = ""
authors = ["ibrg <romanbezh@gmail.com>"]
readme = "README.md"
packages = [{include = "gendiff"}]

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
flake8 = "^6.0.0"
isort = "^5.12.0"
pytest-cov = "^4.0.0"

[tool.poetry.scripts]
gendiff = "gendiff.cli:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
